LPD-87965 Replace 8080 with the dynamic values. In some cases, we optimized by just calculating the value once