@@ -20,6 +20,7 @@ import com.liferay.portal.kernel.test.util.HTTPTestUtil;
 import com.liferay.portal.kernel.test.util.TestPropsValues;
 import com.liferay.portal.kernel.util.HashMapDictionaryBuilder;
 import com.liferay.portal.kernel.util.Http;
+import com.liferay.portal.kernel.util.PortalUtil;
 import com.liferay.portal.test.rule.FeatureFlag;
 import com.liferay.portal.test.rule.Inject;
 
@@ -28,6 +29,7 @@ import java.util.List;
 
 import org.junit.After;
 import org.junit.Assert;
+import org.junit.BeforeClass;
 import org.junit.Test;
 import org.junit.runner.RunWith;
 
@@ -38,6 +40,13 @@ import org.junit.runner.RunWith;
 @RunWith(Arquillian.class)
 public class AuthorizationTokenResourceTest
 	extends BaseAuthorizationTokenResourceTestCase {
+
+	@BeforeClass
+	public static void setUpClass() throws Exception {
+		BaseAuthorizationTokenResourceTestCase.setUpClass();
+
+		_portalServerPort = PortalUtil.getPortalServerPort(false);
+	}
 
 	@After
 	public void tearDown() {
@@ -63,9 +72,9 @@ public class AuthorizationTokenResourceTest
 				OAuth2SecureRandomGenerator.generateClientId(),
 				ClientProfile.WEB_APPLICATION.id(),
 				OAuth2SecureRandomGenerator.generateClientSecret(), "",
-				List.of(), "http://localhost:8080", 0, null, "AI Hub", "",
-				List.of("http://localhost:8080"), false,
-				Arrays.asList("Liferay.AI.Hub.REST.everything"), false,
+				List.of(), "http://localhost:" + _portalServerPort, 0, null,
+				"AI Hub", "", List.of("http://localhost:" + _portalServerPort),
+				false, Arrays.asList("Liferay.AI.Hub.REST.everything"), false,
 				new ServiceContext());
 
 		ConfigurationTestUtil.saveConfiguration(
@@ -75,7 +84,7 @@ public class AuthorizationTokenResourceTest
 			).put(
 				"clientSecret", oAuth2Application.getClientSecret()
 			).put(
-				"serviceURL", "http://localhost:8080"
+				"serviceURL", "http://localhost:" + _portalServerPort
 			).build());
 
 		JSONObject jsonObject = HTTPTestUtil.invokeToJSONObject(
@@ -85,6 +94,8 @@ public class AuthorizationTokenResourceTest
 		Assert.assertTrue(jsonObject.has("scope"));
 		Assert.assertTrue(jsonObject.has("userToken"));
 	}
+
+	private static int _portalServerPort;
 
 	@Inject
 	private OAuth2ApplicationLocalService _oAuth2ApplicationLocalService;
